--- a/templates/index.html
+++ b/templates/index.html
@@ -30,8 +30,8 @@
         crs: L.CRS.Direct,
         zoom: 1,
         minZoom: 1,
-        maxZoom: 5
-        //zoomAnimation: false,
+        maxZoom: 5,
+        zoomAnimation: false
       }).setView([1, 0], 1);
       L.tileLayer('/tile/?z={z}&x={x}&y={y}', {
         tileSize: 256,
