--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>{{.title}}</title>
-    <link rel="stylesheet" href="/static/css/leaflet.css" />
-    <script src="/static/js/leaflet.js"></script>
+    <link rel="stylesheet" href="/css/leaflet.css" />
+    <script src="/js/leaflet.js"></script>
     <style>
       html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
     </style>
