--- a/templates/license.html
+++ b/templates/license.html
@@ -6,15 +6,27 @@
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <style>
-      html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
+      .container {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
     </style>
   </head>
   <body>
 
-    <div class="row">
-      <b>License Expired</b><br />
-      <textarea name="license" class="form-control" rows="5"></textarea><br />
-      <button type="button" class="btn btn-default">Default</button>
+    <div class="container">
+      <div class="page-header">
+        <h1>Enter your license</h1>
+      </div>
+      <p>{{.licenseErr}}</p>
+      <p>{{.licenseCreated}}</p>
+      <p>{{.licenseExpired}}</p>
+      <p>{{.licenseFirstName}}</p>
+      <p>{{.licenseLastName}}</p>
+      <form method="post">
+        <textarea name="license" class="form-control" rows="5"></textarea><br />
+        <button type="submit" class="btn btn-success">Validate</button>
+      </form>
     </div>
 
   </body>
