--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -25,7 +25,8 @@
           <div class="btn btn-default" id="maze">Maze</div><br />
           <div class="btn btn-default" id="newYork">New York</div>
         </div>
-        <div id="coords">x: 0, z: 0</div>
+        <div id="coords">x: 0,<br /> z: 0</div>
+        <div class="btn btn-danger" id="renewTiles">Renew tiles</div><br />
       </div>
       <div class="col-md-11" style="height: 100%">
         <div id="map"></div>
@@ -63,11 +64,17 @@
       map.on('mousemove', function(e) {
         var y = e.latlng.lat * 16*32;
         var x = e.latlng.lng * 16*32;
-        $("#coords").text("x: " + x + ", z: " + y);
+        $("#coords").html("x: " + x + ",<br />z: " + y);
       });
 
       $("#maze").click(function() { map.setView([453/512, 224/512], 3); });
       $("#newYork").click(function() { map.setView([772/512, 2060/512], 2); });
+
+      $("#renewTiles").click(function() {
+        if (confirm('Are you sure you want to delete every tiles ?')) {
+          $.get("/renewtiles/");
+        }
+      });
 
       var players = {};
 
