--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -20,7 +20,9 @@
   </head>
   <body>
     <div style="height: 100%">
-      <div class="col-md-1">
+      <div id="map"></div>
+    </div>
+      <div style="left: 0; position: absolute; top: 0; bottom: 0; background-color: #000; color: #fff; border-right: solid 1px white; opacity: 0.8;" class="col-md-1" >
         <div class="players">
           <div class="btn btn-default" id="maze">Maze</div><br />
           <div class="btn btn-default" id="newYork">New York</div>
@@ -28,10 +30,6 @@
         <div id="coords">x: 0,<br /> z: 0</div>
         <div class="btn btn-danger" id="renewTiles">Renew tiles</div><br />
       </div>
-      <div class="col-md-11" style="height: 100%">
-        <div id="map"></div>
-      </div>
-    </div>
     <script>
       L.Projection.NoWrap = {
         project: function (latlng) {
