--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -9,8 +9,11 @@
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript">
       $( document ).ready(function() {
-        $("#sidebar").on('mouseenter mouseleave', function () {
-          $(this).find("#panel").stop().fadeToggle( "fast", "linear" );
+        $("#panel").on('mouseenter', function () {
+          $(this).stop().animate({opacity: 0.8}, "fast", "linear" );
+        });
+        $("#panel").on('mouseleave', function () {
+          $(this).stop().animate({opacity: 0.0}, "fast", "linear" );
         });
       });
     </script>
@@ -23,22 +26,28 @@
         top: 0;
         bottom: 0;
       }
+      #panel {
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        background-color: #000;
+        color: #fff;
+        border-right: solid 1px white;
+        opacity: 0.0;
+      }
     </style>
   </head>
   <body>
-    <div style="height: 100%">
-      <div id="map"></div>
-    </div>
-      <div id="sidebar" style="left: 0; position: absolute; top: 0; bottom: 0;" class="col-md-1" >
-        <div id="panel" style="left: 0; position: absolute; top: 0; bottom: 0; background-color: #000; color: #fff; border-right: solid 1px white; opacity: 0.8; display: none;">
-          <div class="players">
-          <div class="btn btn-default" id="maze">Maze</div><br />
-          <div class="btn btn-default" id="newYork">New York</div>
-          </div>
-          <div id="coords">x: 0,<br /> z: 0</div>
-          <div class="btn btn-danger" id="renewTiles">Renew tiles</div><br />
-        </div>
+    <div id="map"></div>
+    <div id="panel" class="col-md-1" >
+      <div class="players">
+      <div class="btn btn-default" id="maze">Maze</div><br />
+      <div class="btn btn-default" id="newYork">New York</div>
       </div>
+      <div id="coords">x: 0,<br /> z: 0</div>
+      <div class="btn btn-danger" id="renewTiles">Renew tiles</div><br />
+    </div>
     <script>
       L.Projection.NoWrap = {
         project: function (latlng) {
