--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -36,6 +36,15 @@
         border-right: solid 1px white;
         opacity: 0.0;
       }
+      #coords {
+        position: absolute;
+        left: 0px;
+        bottom: 0px;
+        background-color: black;
+        width: 80px;
+        color: white;
+        padding: 5px 5px;
+      }
     </style>
   </head>
   <body>
@@ -45,9 +54,9 @@
       <div class="btn btn-default" id="maze">Maze</div><br />
       <div class="btn btn-default" id="newYork">New York</div>
       </div>
-      <div id="coords">x: 0,<br /> z: 0</div>
       <div class="btn btn-danger" id="renewTiles">Renew tiles</div><br />
     </div>
+    <div id="coords">x: 0,<br /> z: 0</div>
     <script>
       L.Projection.NoWrap = {
         project: function (latlng) {
